--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -13,6 +13,7 @@
   "author": "Jasir Mohammad Zaeem",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.14.0",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.16",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
   }
 }
