--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -23,5 +23,8 @@
     "mongoose": "^5.10.16",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
