--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -11,10 +11,13 @@
   "author": "Jasir Mohammad Zaeem",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.17"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.17",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "@jest/globals": "^26.6.2",
