--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.19.2",
+    "apollo-server-errors": "^2.4.2",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
